@@ -9,6 +9,8 @@ CHANGES IN VERSION 1.7.1
  o add {set,get}CrossMatchingMinimalNumberOfCommonPeaks [2014-04-25 Fri]
  o add filterMatchedEMRTsByCommonPeaks [2014-04-25 Fri]
  o add testthat to Suggests [2014-04-25 Fri]
+ o add matchColumn argument to filterMatchedEMRTsByCommonPeaks and
+   plotCrossMatchingSummary [2014-04-28 Mon]
 
 CHANGES IN VERSION 1.7.0
 ------------------------
